inconsistencia de tipos de datos entre yaml y python mantener ids para colaboradores, artistas y generos, minor changes
